crates/legalis-cli/tests/snapshots/snapshot_tests__condition_display_snapshots@condition_2.snap
---
source: crates/legalis-cli/tests/snapshot_tests.rs
expression: display
---
has_attribute(citizen)
