crates/legalis-cli/tests/snapshots/snapshot_tests__condition_display_snapshots@condition_3.snap
---
source: crates/legalis-cli/tests/snapshot_tests.rs
expression: display
---
(age >= 21 AND has_attribute(licensed))
