crates/legalis-cli/tests/snapshots/snapshot_tests__printer_compact_output_snapshot.snap
---
source: crates/legalis-cli/tests/snapshot_tests.rs
expression: output
---
STATUTE complex-snapshot: "Complex Snapshot Test Act" {
  JURISDICTION "US-CA"
  VERSION 2
  WHEN AGE >= 18 AND INCOME > 30000
  THEN GRANT "Complex right"
  DISCRETION "Consider individual circumstances"
}
