crates/legalis-cli/tests/snapshots/snapshot_tests__printer_output_snapshot.snap
---
source: crates/legalis-cli/tests/snapshot_tests.rs
expression: output
---
STATUTE snapshot-test: "Snapshot Test Act" {
    JURISDICTION "US"
    WHEN AGE >= 18
    THEN GRANT "Test right"
}
