crates/legalis-cli/tests/snapshots/snapshot_tests__statute_display_snapshot.snap
---
source: crates/legalis-cli/tests/snapshot_tests.rs
expression: display
---
STATUTE complex-snapshot: "Complex Snapshot Test Act"
  JURISDICTION: US-CA
  VERSION: 2
  no temporal constraints
  WHEN:
    age >= 18
    income > 30000
  THEN: GRANT: Complex right
  DISCRETION: Consider individual circumstances
